[project]
name = "water-ai-fastapi"
version = "0.1.0"
description = "FastAPI AI service for water approval precheck"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn==0.34.0",
    "pydantic==2.10.4",
    "chromadb==0.5.23",
    "langchain==0.3.13",
    "python-multipart==0.0.20",
    "httpx==0.28.1",
    "numpy==1.26.4",
    "Pillow==11.3.0",
    "opencv-python==4.10.0.84",
    "rapidocr-onnxruntime==1.4.4",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
]
mineru = [
    "mineru",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
